--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    text-align: center;
+  }
+  nav a {
+    padding: 10px;
+    background-color:bisque;
+  }
+  figcaption {
+    font-size: small;
+  }
+  #featured-property p {
+    width: 800px;
+    padding-left: 700px;
+    margin: 5px;
+  }
+  #details div {
+    float: left;
+    width: 25%;
+    background-color: bisque;
+  }
